--- a/3.html
+++ b/3.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="styles.css" />
-<link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-
-<!DOCTYPE html>
+<style>
+layout { display: layout(aspect); }
+</style>
 <link rel="stylesheet" href="styles.css" />
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
@@ -34,7 +31,7 @@ registerLayout('aspect', class {
 <pre><code class="html"></code></pre>
 
 <div id="wrapper">
-<layout id="A" style="display: layout(aspect);"></layout>
+<layout id="A"></layout>
 </div>
 
 <script src="script.js"></script>
