--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@ class: center, middle
 
 ---
 
-# Use-cases 🤔
+# Use-cases 🤔 ("blocky")
 
- - 
+ - Masonry
+
+ - Constraint Based Layouts
+
+ - Subgrid
 
 ---
 
